tests/invalid_nodepend/unicode_1.err_exp
unicode_1.m:005: Warning: the interface of module [38;5;87m`unicode_1'[39;49m [38;5;203mdoes not export[39;49m
unicode_1.m:005:   [38;5;203manything.[39;49m
unicode_1.m:009: Syntax error at token 'int': operator or `.' expected.
unicode_1.m:009: Syntax error: expected only hexadecimal digits in Unicode
unicode_1.m:009:   escape sequence, got `x'.
For more information, recompile with `-E'.
